# watchlist-config-generator

./: AUTHORS.rst  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  setup.cfg  setup.py
src/watchlist_config_generator/: __init__.py  cli.py  watchlist_config_generator.py
tests/: conftest.py  test_watchlist_config_generator.py
tests/static_data/: COREREF_367_20201016.txt  COREREF_673_20201016.txt  complex_input_file.json  instruments.json  peregrine_traders_config_20201026.csv
tests/static_data/mock_data_dir/2020/03/16/S794/CORE/: COREREF_794_20200316.txt.bz2
tests/static_data/mock_data_dir/2020/10/16/S207/CORE/: COREREF_207_20201016.txt.bz2
tests/static_data/mock_data_dir/2020/10/16/S367/CORE/: COREREF_367_20201016.txt.bz2
tests/static_data/mock_data_dir/2020/10/16/S673/CORE/: COREREF_673_20201016.txt.bz2
