[metadata]
name = watchlist-config-generator
version = 1.0.0
description = A Python library that automates the creation of Watchlist configuration files.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jacopo Abbate
author_email = jacopo.abbate@gmail.com
maintainer = Jacopo Abbate
maintainer_email = jacopo.abbate@gmail.com
license = 'MIT'
license_file = LICENSE
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = ice, watchlist, config, generator

[options]
packages = find:
install_requires =
    click
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    makeconfig = watchlist_config_generator.cli:makeconfig


[options.extras_require]
testing =
    pytest>=4.0.0
    pytest-cov>=2.5.1
    pytest-mock>=1.10.0

[flake8]
ignore = D401,E226,E302,E41
max-line-length = 160
exclude = tests/*
max-complexity = 10

[mypy]
mypy_path = src
disallow_any_explicit = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

